Updating references of alexlaird.name to alexlaird.com.

--- a/App/installer/releasenotes.html
+++ b/App/installer/releasenotes.html
@@ -46,7 +46,7 @@
 
             <p><b><span style='font-size:12.0pt;'>Bug Reporting</span></b></p>
 
-            <p>Found a bug? Let me know by contacting me at <a href="mailto:getorganized@alexlaird.name"><span style='color:blue'>getorganized@alexlaird.name</span></a>.</span></p>
+            <p>Found a bug? Let me know by contacting me at <a href="mailto:getorganized@alexlaird.com"><span style='color:blue'>getorganized@alexlaird.com</span></a>.</span></p>
             
             <br />
 
@@ -60,7 +60,7 @@
 
             <p><b><span style='font-size:12pt;'>Installation Guide</span></b></p>
 
-            <p>If you have a Windows or Mac system, please download and use the appropriate installers from alexlaird.name.  Otherwise, use the following instructions to install from the portable version found at alexlaird.name.</span></p>
+            <p>If you have a Windows or Mac system, please download and use the appropriate installers from alexlaird.com.  Otherwise, use the following instructions to install from the portable version found at alexlaird.com.</span></p>
 
             <ul><li>Download and install the JRE.</li>
 
